[CONJ-1364] Simplify code: Java 16 pattern matching and JDK API replacements